syntax = "proto3";

option java_multiple_files = true;
option java_package = "eu.hammarback.service";
option java_outer_classname = "MyServiceProto";
option objc_class_prefix = "MSP";

package service;

service MyService {
  rpc GetData (GetDataRequest) returns (GetDataReply) {}
}

message GetDataRequest {
  string identifier = 1;
}

message GetDataReply {
  string identifier = 1;
  int64 timestamp = 2;
  repeated Item items = 3;
}

message Item {
  string identifier = 1;
}
